Re-added mvc login project.

--- a/WebAppCoreMvcLogin/Views/_ViewImports.cshtml
+++ b/WebAppCoreMvcLogin/Views/_ViewImports.cshtml
@@ -1,2 +1,6 @@
 ﻿@using WebAppCoreMvcLogin
+@using WebAppCoreMvcLogin.Models
+@using WebAppCoreMvcLogin.Models.AccountViewModels
+@using WebAppCoreMvcLogin.Models.ManageViewModels
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
